--- a/Aakif-In-Pairs/index.html
+++ b/Aakif-In-Pairs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Profile - Lorem Ipsum</title>
+    <title>InPairs.io/Aakif Aslam</title>
     <style>
         * {
             margin: 0;
@@ -358,21 +358,21 @@
             <div class="profile-main">
                 <img src="./assets/images/IMG_0338.jpg" alt="Sample Profile" class="profile-photo">
                 <div class="profile-info">
-                    <h1>Lorem Ipsum</h1>
+                    <h1>Aakif Aslam</h1>
                     <div class="profile-details">
                         <div class="detail-item">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"></path>
                                 <circle cx="12" cy="10" r="3"></circle>
                             </svg>
-                            <span>Sample City, State</span>
+                            <span>Canton, Michigan / Santa Clara, California</span>
                         </div>
                         <div class="detail-item">
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
                                 <rect width="20" height="14" x="2" y="6" rx="2"></rect>
                             </svg>
-                            <span>Professional</span>
+                            <span>Firmvare Software Engineer</span>
                         </div>
                     </div>
                 </div>
@@ -382,7 +382,8 @@
         <!-- Bio Section -->
         <div class="bio">
             <h3>Bio</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>Single owner, low miles. runs and starts great. title in hand. <br>
+                Kind, humble, honest, hardworking, nature lover. loves to tinker, code, and build things. </p>
         </div>
 
         <!-- Contact Info -->
@@ -397,7 +398,7 @@
                     </div>
                     <div class="contact-details">
                         <h4>Social Media</h4>
-                        <a href="#" target="_blank">@sampleuser</a>
+                        <a href="#" target="_blank">@aslamaakif</a>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -408,7 +409,7 @@
                     </div>
                     <div class="contact-details">
                         <h4>Phone</h4>
-                        <a href="tel:1234567890">(123) 456-7890</a>
+                        <a href="tel:1234567890">(734) 447-5314</a>
                     </div>
                 </div>
             </div>
@@ -441,7 +442,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Age</h4>
-                        <p>25-30</p>
+                        <p>27</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -453,7 +454,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Citizenship</h4>
-                        <p>Sample Citizenship</p>
+                        <p>US Citizen</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -466,7 +467,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Spent most time in</h4>
-                        <p>Sample State</p>
+                        <p>Michigan</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -479,7 +480,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Education</h4>
-                        <p>Bachelor's Degree</p>
+                        <p>Bachelor's Degree in Computer Science</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -495,7 +496,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Languages</h4>
-                        <p>English, Sample Language</p>
+                        <p>English, Urdu</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -507,7 +508,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Origin</h4>
-                        <p>Sample Origin</p>
+                        <p>Bihar, India / Karachi, Pakistan</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -518,7 +519,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Sect</h4>
-                        <p>Sample Sect</p>
+                        <p>Sunni</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -559,7 +560,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Willing to move?</h4>
-                        <p>Yes</p>
+                        <p>No</p>
                     </div>
                 </div>
                 <div class="intro-item">
@@ -580,7 +581,7 @@
                     </div>
                     <div class="intro-content">
                         <h4>Main Masjid</h4>
-                        <p>Sample Community Center</p>
+                        <p>The Muslim Community Association of Ann Arbor: MCA</p>
                     </div>
                 </div>
             </div>
@@ -611,7 +612,7 @@
                 <div class="scale-item">
                     <div class="scale-header">
                         <span class="scale-title">Fitness activity</span>
-                        <span class="scale-value">4 / 5</span>
+                        <span class="scale-value">2 / 5</span>
                     </div>
                     <div class="progress-bar">
                         <div class="progress-fill" style="width: 80%"></div>
